# Game-Engine-UUEngine

./: .gitignore  .gitignore.txt  CMakeLists.txt  Makefile  README.md  umlDiagram.drawio
UUEngine/: UUEngine.pro  UUEngine.pro.user.022a551  UUEngine.pro.user.c11e504
build-UUEngine-Desktop-Debug/: Makefile
build-UUEngine-Desktop_Qt_5_15_2_GCC_64bit-Release/: Makefile
build-UUEngine-Desktop_Qt_6_2_4_GCC_64bit-Profile/: Makefile
build-UUEngine-Desktop_Qt_6_2_4_GCC_64bit-Release/: Makefile
src/: main.cpp
src/Core/: CMakeLists.txt  EngineCore.pro  Makefile  cmake_install.cmake
src/Core/Cores/: EngineCore.cpp  EngineCore.h  GraphicsEngine.cpp  GraphicsEngine.h  InputEngine.cpp  InputEngine.h  PhysicsEngine.cpp  PhysicsEngine.h  ScriptEngine.cpp  ScriptEngine.h  enginecore.cpp  graphicsengine.cpp  graphicsengine.h  inputengine.cpp  inputengine.h  scriptengine.cpp
src/Core/Folders/: MaterialLib.cpp  MaterialLib.h  ModelFolder.cpp  ModelFolder.h  ScriptFolder.cpp  ScriptFolder.h  TextureFolder.cpp  TextureFolder.h  materiallib.cpp  modelfolder.cpp  scriptfolder.cpp
src/Core/Services/: Eventhandler.cpp  ModelBuilder.cpp  ModelBuilder.h  ModelLoader.cpp  ModelLoader.h  ProjectProcessor.cpp  ProjectProcessor.h  Projectinfo.cpp  Projectinfo.h  eventhandler.h  modelbuilder.cpp  modelloader.cpp  modelloader.h  projectinfo.cpp  projectinfo.h  projectprocessor.cpp  projectprocessor.h
src/UI/: CMakeLists.txt  EngineUI.pro  MainWindow.cpp  MainWindow.h  MainWindowViewModel.cpp  MainWindowViewModel.h  ObjectInfo.cpp  ObjectInfo.h  OpenGLWidgetViewModel.cpp  OpenGLWidgetViewModel.h  ProjectCreator.cpp  ProjectCreator.h  ProjectWidgetViewModel.cpp  ProjectWidgetViewModel.h  main.cpp  mainWindow.ui  mainwindow.cpp  mainwindow.h  mainwindowviewmodel.cpp  objectinfo.cpp  objectinfo.h  openglwidgetviewmodel.h  projectcreator.cpp  projectcreator.h  projectcreator.ui  projectwidgetviewmodel.cpp  resources.qrc
src/UI/Shaders/: fdepth.fsh  fselectshader.fsh  fshader.fsh  fskybox.fsh  vdepth.vsh  vselectshader.vsh  vshader.vsh  vskybox.vsh
(+1963 files in other folders)
